--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,21 @@
-<form>
-  <div class="form-group">Add a Link</div>
-  <div class="form-group">
-    <label for="title">Title:</label>
-    <input type="text" class="form-control" name="title">
-  </div>
-  <div class="form-group">
-    <label for="link">Link:</label>
-    <input type="text" class="form-control" name="link">
-  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <form>
+        <div class="form-group"><h4>Add a Link</h4></div>
+        <div class="form-group">
+          <label for="title">Title:</label>
+          <input type="text" class="form-control" name="title" #newtitle>
+        </div>
+        <div class="form-group">
+          <label for="link">Link:</label>
+          <input type="text" class="form-control" name="link" #newlink>
+        </div>
 
-  <button type="submit" class="btn btn-primary">Add a Link</button>
-</form>
+        <button (click)="addArticle(newtitle,newlink)" class="btn btn-primary">Submit link</button>
+      </form>
+      <app-article>
+      </app-article>
+    </div>
+  </div>
+</div>
