--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,9 @@
 
         <button (click)="addArticle(newtitle,newlink)" class="btn btn-primary">Submit link</button>
       </form>
-      <app-article>
+      <app-article
+        *ngFor="let article of sortedArticles()"
+        [article]="article">
       </app-article>
     </div>
   </div>
